<resources>
    <string name="app_name">Smart ICU</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="address">address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone">Phone</string>
    <string name="login">LOG IN</string>
    <string name="login_btn">Login</string>
    <string name="Create">Sign up</string>
    <string name="create_new_account">Create new account?</string>
    <string name="title_create_account">CREATE NEW ACCOUNT</string>
    <string name="already_have_acc">Already have account? </string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget password ?</string>
    <string name="logout">Logout</string>
    <string name="recognize_TAB">Recognize</string>
    <string name="profile_TAB">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">welcome in our App</string>
    <string name="booking_location">Booking &amp; Location</string>
    <string name="chat_bot">Chatbot</string>
    <string name="status_bed">Status of Beds</string>
    <string name="welcome">WELCOME</string>
    <string name="what_s_on_your_mind">Enter your query</string>
    <string name="book">Book</string>
   <string name="google_maps_key">AIzaSyC0BL3a47_4q5NOXVriNPeJBg_H2vUKNFg</string>
<!--   <string name="google_maps_key">AIzaSyAsGFcaJ5wzMir2C9VrACxOAWX9js2td9U</string>-->
<!--    <string name="google_maps_key">AIzaSyDhv41Xk0jbt9l4iyIP-0mSKEwUFvL3J_c</string>-->
</resources>