<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.9"
    android:background="@color/signup_background"
    tools:context=".ui.signin.SignIn"
   >

    <ProgressBar
        android:id="@+id/signIn_prog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        android:background="@drawable/progress_background"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/parent_signIn"
        >





        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/logo_1"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/g3"
            android:src="#000"
            android:foreground="@drawable/avatar"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/logo_1"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/font_title"
                android:textStyle="bold"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/t2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/t1"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColorHint="@color/hint_color"
            app:startIconDrawable="@drawable/person_icon"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginEnd="@dimen/margin_end"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:padding="@dimen/padding"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/font_hint"
                app:layout_constraintTop_toBottomOf="@+id/t1" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/t3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint_color"
            app:layout_constraintTop_toBottomOf="@+id/t2"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            app:startIconDrawable="@drawable/lock_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginEnd="@dimen/margin_end"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/padding"

                android:textColor="@color/white"
                android:textSize="@dimen/font_hint"
                app:layout_constraintTop_toBottomOf="@+id/g33" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/remember_me_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/t3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:padding="@dimen/_5sdp"
            android:text="@string/remember_me"
            android:textStyle="bold"
            android:theme="@style/MyCheckbox"
            android:textSize="@dimen/font_pragraph"
            android:textColor="@color/hint_color"
            android:checked="true"
           />

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/btn_shape_1"
            android:text="@string/login_btn"
            android:textAllCaps="false"
            android:textColor="@color/text_btn_color"
            android:textSize="@dimen/font_pragraph"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/remember_me_btn" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding"
            android:text="@string/forget_password"
            android:textColor="@color/hint_color"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_signin" />

        <TextView
            android:id="@+id/signUp_move"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding"
            android:text="@string/create_new_account"
            android:textColor="@color/text_btn_color"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forget_password" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

